# ez-crypt-tool

./: .env  .gitignore  Makefile  README.md  requirements.txt  setup.cfg  setup.py
conf/: .ezcrypt.key  README.md
ez_crypt_tool/: __main__.py  __version__.py  ez_crypt_tool.py  module_info.py
sandbox/: ez_crypt_example.py
tests/: test_ez_crypt_tool.py
