[metadata]
name = ez_crypt_tool
version = 1.0.4
author = damonb123
author_email = damonb123@outlook.com
license = Apache-2.0
license_files = LICENSE
description = Easily encrypt credentials to use in your application
description_file = README.md
keywords = cryptography, security, passwords
url = https://github.com/damonb123/ez-crypt-tool
download_url =
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Operating System :: OS Independent
project_urls =
    Bug Reports = https://github.com/damonb123/ez-crypt-tool/issues
    Source = https://github.com/damonb123/ez-crypt-tool

[options]
zip_safe = False
packages = find:
package_dir =
    =.
include_package_data = True
setup_requires =
install_requires = rich >= 12.5.1
    requests >= 2.28.1
	cryptography >= 37.0.4
	fernet >= 1.0.1
python_requires = >=3.8

[options.packages.find]
where = .
include = ez_crypt_tool
exclude = tests

[options.entry_points]
console_scripts =
    ez_crypt_tool = ez_crypt_tool.__main__:main

[build]
build_base = ./.build

[egg_info]
egg_base = ./.build

[sdist]
keep_temp = 0
dist_dir = dist